# subgraph-sketching

./: .gitignore  Dockerfile  pyproject.toml
src/subgraph_sketching/: data.py
src/subgraph_sketching/datasets/: elph.py  seal.py
src/subgraph_sketching/models/: elph.py  seal.py
src/subgraph_sketching/runners/: inference.py  run.py  train.py
test/: test_buddy.py  test_data.py  test_elph.py  test_elph_datasets.py  test_hashing.py  test_heuristics.py  test_labelling_tricks.py  test_seal_datasets.py  test_sign.py
