[project]
name = "subgraph-sketching"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch-geometric==2.2.0",
    "torch==1.13.1+cu117",
    "torch-scatter==2.1.1+pt113cu117",
    "torch-sparse==0.6.17+pt113cu117",
    "torch-spline-conv==1.2.2+pt113cu117",
    "torch-cluster==1.6.1+pt113cu117",
    "torchvision==0.14.1",
    "torchaudio==0.13.1",
    "fast-pagerank>=1.0.0",
    "wandb>=0.19.1",
    "datasketch>=1.6.5",
    "ogb>=1.3.6",
]

[tool.uv]
find-links = [ "https://data.pyg.org/whl/torch-1.13.1+cu117.html" ]

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu117"
explicit = true

[build-system]
requires = [ "hatchling" ]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
